--- a/2021/130921 truth.md
+++ b/2021/130921 truth.md
@@ -10,7 +10,7 @@
 
 ---
 
-玫瑰 rose ローズ 🌹 ... 各種各樣的表示 而玫瑰永遠只是玫瑰而已 換個表示 她還是她。真理是絕對的 表示是任意的。任意的表示是人的語言。從這個角度看 數學本質在乎真理 而數學不是真理的語言 但相當接近。音樂似乎更接近。
+玫瑰 rose ローズ 🌹 ... 各種各樣的表示 而玫瑰永遠只是玫瑰而已 換個表示 她還是她。真理是絕對的 表示是任意的。任意的表示是人的語言。從這個角度看 數學本質在乎真理 而數學不是真理的語言 但相當接近。音樂似乎更接近 #1 
 
 所以 洪荒宇宙果真是寂靜的嗎？
 
