--- a/2021/211000.md
+++ b/2021/211000.md
@@ -28,3 +28,11 @@
 - 也許我不在意 也許我在意。沒那麼在意的一點點在意。
 - 好睏啊。好冷。一大早就要躲回棉被睡覺。
 
+十月22日 晴雨
+- 聽了一晚上紅樓聽到23日了 我這是壓力有多大。好想吃火鍋。
+
+十月23日 下午晴
+- 上海一百樣好 只是冬天沒暖氣。
+- 冬天的睏是刻寫在基因裡的 全天的全面的睏 斷斷續續睡了要有一天。
+- 中國有最美的文字 最好的文化 最深的底蘊。但總有一種 式微的哀愁感。
+
