--- a/2021/211000.md
+++ b/2021/211000.md
@@ -1,37 +1,37 @@
-十月15日 多雲 時雨時晴  
+十月15日 週五 多雲 時雨時晴  
 - 好幾天夢裡談戀愛。醒來想說 若能夢裡談戀愛似乎也挺好 本來就是精神體驗 醒來還不耽誤其他事情。  
 可是？  
 
-十月16日 上午多雲 下午轉晴
+十月16日 週六 上午多雲 下午轉晴
 - 夢裡都是化學方程式。覺得寫paper好像也不怎麼乏味了。  
 雖說改隊友英文類似refactor code 其實不如都我寫。其實最開心還是遇到聰明隊友。
 - 想研究算法。「放假了就又能開coding project了」居然變成一種精神鼓勵。
 
-十月17日 多雲
+十月17日 週日 多雲
 - 也不是排斥team work 人與人全在於合不合。和化學不合的人team up內耗好大。  
 其實早發現了 喜不喜歡一件事 多半取決於喜不喜歡這件事涉及的人。化學課學下來了 我就是靠愛發電的。
 - 近倆禮拜總做同一系的夢。可能意識裡喜歡談戀愛 理智上嫌麻煩。 
 
-十月18日 多雲 下午晴
+十月18日 週一 多雲 下午晴
 - 昨晚睡前忽然想 Google是很厲害 不過也讓人少了很多說話的機會呢。
 - 喜歡上讀數學書.前陣子能每天抽空讀二三十分鐘 這兩天一點都不行。而今天又發現一本超有趣的 好想趕快看呀。
 - 不能看社會新聞。我覺得忙想要放假 而有被通緝的人畏罪自殺(?)了。
 
-十月19日 雨
+十月19日 週二 雨
 - 推導計算可能真的手寫更適合 尤其傅立葉展開係數這種 打字眼睛都要瞎了。再好聽的鍵盤聲也沒用。 
 - 有點不舒服 計畫0點睡 結果又各種郵件忙到到20日凌晨2點。真的想 放 假 。
 
-十月20日 雨
+十月20日 週三 雨
 - 互道晚安真的非常溫暖 能治癒一天的疲憊。
 
-十月21日 凜冽的晴雨
+十月21日 週四 凜冽的晴雨
 - 也許我不在意 也許我在意。沒那麼在意的一點點在意。
 - 好睏啊。好冷。一大早就要躲回棉被睡覺。
 
-十月22日 晴雨
+十月22日 週五 晴雨
 - 聽了一晚上紅樓聽到23日了 我這是壓力有多大。好想吃火鍋。
 
-十月23日 下午晴
+十月23日 週六 下午晴
 - 上海一百樣好 只是冬天沒暖氣。
 - 冬天的睏是刻寫在基因裡的 全天的全面的睏 斷斷續續睡了要有一天。
 - 中國有最美的文字 最好的文化 最深的底蘊。但總有一種 式微的哀愁感。
