--- a/2021/211000.md
+++ b/2021/211000.md
@@ -38,3 +38,8 @@
 - 朋友力推了一個app 功能性上似乎確有獨到之處 但默認的各種icon實在晃眼。  
 Notes markdown git。就我個人需求及審美 感覺很難有app可以超越這三者combo了。
 - 怎麼說呢 可能直至今天之前 我都覺得中國的數學基礎教育非常紮實 但好像也不盡然。雖然最後也學到高數線代了 但數學的啟蒙 真的可以再有趣一些 多維一些 深入一些。而並不僅是一分鐘速算多少題 文字遊戲般的應用題 外加標準奧數套餐。好的數學書可以有趣到什麼程度呢 讓我有點想去當小學數學老師。
+
+十月24日 週日 晴
+- Trackpad摔碎了 觸控都好 就玻璃碎了。想了會兒 「認了 再買個吧」。結果黑色系列停產了。  
+心情糟糕透了。
+- 溢價又買了一個。心情也未必好很多。
