--- a/2021/211024 value.md
+++ b/2021/211024 value.md
@@ -1,4 +1,4 @@
- Trackpad摔碎的時候很懊惱 很快發現這可以用錢解決 就還好。但很快的 發現那麼不湊巧 黑灰系列幾個月前就停產售罄了 而我怎麼都想要塊黑的 心情瞬間低落到不行。即便後來找到了尚有庫存的商家也高興不太起來。意外得知黑灰配件停產這件事突然激活了舊日一段情緒 持續了挺長一段時間的情緒 iPhone變大那時候的情緒 OS設計扁平化那時候的情緒。無奈 沮喪 懊惱 「我不要繼續用蘋果了」。很快發現 其他手機只更不入眼 挺受打擊 憂愁自己從今往後沒新手機可用了 「我就4s用到地老天荒了 也絕不更新系統」。我在某些奇怪的點上是相當執著。
+ Trackpad摔碎的時候很懊惱 很快發現這可以用錢解決 就還好。但很快的 發現那麼不湊巧 黑灰系列幾個月前就停產售罄了 而我怎麼都想要塊黑的 心情瞬間低落到不行。即便後來找到了尚有庫存的商家也高興不太起來。意外得知黑灰配件停產這件事突然激活了舊日一段情緒 持續了挺長一段時間的情緒 iPhone變大那時候的情緒 OS設計扁平化那時候的情緒。無奈 沮喪 懊惱 「我不要繼續用蘋果了」。很快發現 其他手機只更不入眼 挺受打擊 憂愁自己從今往後沒新手機可用了 「就4s用到地老天荒了 也絕不更新系統」。在某些奇怪的點上我是相當執著。
  
 而忘了什麼原因 總之還是買了新手機 且最大尺寸的。不過4s的系統確實沒升級 至今停留在iOS6(?)。而自此之後所謂的便攜性就沒再出現在考量範圍裡 直接Max 想來諷刺到家了。以致我仍記得 被手比我顯然大許多的男生問為什麼手機選比自己手還大的 我內心也在想為什麼啊。感覺上 蘋果從某個時點起 就開始讓我們選 外觀/性能/便攜 變成不可能三角。我要性能要續航就要犧牲掉一些別的什麼。恐怖的是漸漸也就習慣了不以為麻煩了。重重的手機 背面很多眼睛的手機 大到常需要帶包的手機。那麼同樣的 Mac的配件呢？我現在是那麼那麼那麼的喜歡黑灰系 不惜溢價也要買回來。可就是停產了 五年十年後配件總要換新 那會兒我是用什麼顏色的配件呢？是不是白色也莫名就變得可接受了呢？那我現在到底在不快什麼 在執著什麼。我的感受我的偏好其實也就是眼下的 暫時的。根本經不住時間的考驗。既然如此 那為什麼不現在就開開心心買個新出的白色呢？
 
@@ -6,4 +6,4 @@
 
 又恰好是今天 比起南航若干家庭 我的煩惱似乎完全不值一提。在更大的是否面前 確實 具體的實物的能明確物權的 大可不必太執著。知識 意識 人間的情誼 這些無形的抽象的可能窮其一生也得不到許多的才是真正有價值的 值得思考煩惱的。雖然也都帶不走。
 
-只不過我幻想中 或說日夜的祈禱中 末了會有一片光 沒有型態的汪洋。我們在那光裡抽象的相逢 融合。既煙滅又永生。
+只不過我幻想中 或說日夜的祈禱中 末了會有一片光 一片不具型態的汪洋。我們在那光裡抽象的相逢 融合。既煙滅又永生。
