--- a/2021/211100.md
+++ b/2021/211100.md
@@ -8,3 +8,9 @@
 十一月4日 週四 霧
 - 做了一個相當美好的夢。相 當 美 好。
 - 丟三落四懊惱了一小會兒。忙時出錯添亂根本就是給自己找壓力。安慰說眼下也用不到卡就等所有報告結案再申請新的吧 結果有人撿到了 真是太好啦。
+
+十一月5日 週五 晴
+- 看了一部關於黃河的短片 發現所謂鄉情大約就是 我喜歡住在歐洲 但對這片土地我似乎沒什麼感情；我沒去過黃河流經的任何省份 可能也不會喜歡住在那裡 但就是有歸屬感。我熱愛中國的山河土地。
+
+十一月8日 週一 晴
+- 
