--- a/2021/211100.md
+++ b/2021/211100.md
@@ -17,5 +17,8 @@
 - 今天中午又煮泡麵時發現 可能也就半年前 我的胃還屬於一吃泡麵就難受的嬌氣狀態 最近不知不覺都快吃掉一箱泡麵了 竟還覺得挺好吃。不知該說自己很棒呢 還是有點可憐。
 
 十一月10日 週三 晴
-- 各種原因 總之最後還了張竹製的新桌子 又添了個小桌邊櫃。好喜歡。我好像已經不會靜靜躺著的放假了。
+- 各種原因 總之最後選了張竹製的新桌子 又添了個小桌邊櫃。好喜歡。我好像已經不會靜靜躺著的放假了。
 - 回家點開鏈接 螢幕上的字讓人有些情緒。想起裝燈的事。又想起很多事。好像我真的什麼都會 或說都學得會。只是想或不想。而很多時候我不想。我樂於這也不會那也不會 這是我試圖和人融合在一起的方式。如果什麼事都是我自己 那還有什麼理由需要你呢。
+
+十一月15日 週一 陰
+- "Everyday life is like programming, I guess. If you love something you can put beauty into it." ― Donald E. Knuth
