--- a/2021/211100.md
+++ b/2021/211100.md
@@ -22,3 +22,10 @@
 
 十一月15日 週一 陰
 - "Everyday life is like programming, I guess. If you love something you can put beauty into it." ― Donald E. Knuth
+
+十一月16日 週二 陰
+- 「這不是很簡單嗎 你Matlab 不熟練」 讀到這句話時很受打動。感覺叉路口 又被人輕輕推了一下。
+
+十一月17日 週三 多雲
+- 豈止「不熟練」 根本「不會」。  
+神啊。
