some fun moments

--- a/2021/211100.md
+++ b/2021/211100.md
@@ -35,3 +35,10 @@
 
 十一月25日 週四 陰
 - Crescent by Rob Simonsen & Judson Crane循環了兩天了 好可惜Apple Music沒有。
+
+十一月28日 週日 陰
+- 下午玩桌遊 找遊戲時發現櫃子最末一盒未開封的Q 定睛一看 「等等 讓我先去取消一個訂單」。  
+很快在另一處櫃子發現遊戲T 「這不是這次黑五心裡默念不買不買的嗎 雖然但是 好吧也算沒買重吧」。  
+晚上又在另一處發現 「額 什麼時候 怎麼連遊戲T的變體都買了？！」
+- 「你有邏輯嗎？有嗎？」  
+ 「我也沒有錢」
