well, no matter how boring it is
get it finished

--- a/2021/211200.md
+++ b/2021/211200.md
@@ -1,2 +1,13 @@
 十二月1日 週三 雨
 - 我喜歡review。
+
+十二月4日 週六 陰雨
+- 我的名字似乎是媽媽懷我的時候夢見了我 從我說的話裡取的。小時候羨慕同學名字三個字的。現在覺得自己的名簡直又好聽又好看。
+- 包禮物和收禮物一樣 令人開心。
+- 又給自己新開了支線副本。知道是朋友閉著眼誇 但誰不喜歡被誇呢。
+- 有點缺乏鬥志。每天睏得不行。
+- 有很多很多話想寫 不知從何說起。
+
+十二月5日 週日 陰雨
+- 當我在用八小時做一小時能做完的事 就 真的沒什麼熱情啊。眼看會漸漸演變成最後一小時做完八小時的事。唉。
+- 似乎不全是亂誇 「練得怎麼樣了？」嗯 還是把功課先趕快弄一弄吧 不然什麼都不能放手做。
