--- a/2021/211200.md
+++ b/2021/211200.md
@@ -11,3 +11,7 @@
 十二月5日 週日 陰雨
 - 當我在用八小時做一小時能做完的事 就 真的沒什麼熱情啊。眼看會漸漸演變成最後一小時做完八小時的事。唉。
 - 似乎不全是亂誇 「練得怎麼樣了？」嗯 還是把功課先趕快弄一弄吧 不然什麼都不能放手做。
+
+十二月6日 週一 陰
+- 早上做了個很真實的夢。相擁的快樂 被撞見的害羞 各種觸感情緒細膩到無以復加。本想好好寫一寫 又覺沒什麼好寫的。記錄一下。
+- 真的好喜歡包禮物啊。
