--- a/2021/211200.md
+++ b/2021/211200.md
@@ -15,3 +15,4 @@
 十二月6日 週一 陰
 - 早上做了個很真實的夢。相擁的快樂 被撞見的害羞 各種觸感情緒細膩到無以復加。本想好好寫一寫 又覺沒什麼好寫的。記錄一下。
 - 真的好喜歡包禮物啊。
+- 麵包忘了。正買菜 突然來信說等了一個多禮拜從法國寄出的包裹不但沒送到家裡居然要退回寄件人 拎盒牛奶就撤了。想到要再出門心裡有點掙扎。
