--- a/2021/211200.md
+++ b/2021/211200.md
@@ -16,3 +16,15 @@
 - 早上做了個很真實的夢。相擁的快樂 被撞見的害羞 各種觸感情緒細膩到無以復加。本想好好寫一寫 又覺沒什麼好寫的。記錄一下。
 - 真的好喜歡包禮物啊。
 - 麵包忘了。正買菜 突然來信說等了一個多禮拜從法國寄出的包裹不但沒送到家裡居然要退回寄件人 拎盒牛奶就撤了。想到要再出門心裡有點掙扎。
+
+十二月10日 週五 陰
+- 什麼時候能再去瑞士呀？
+- 今早非常精確的夢見了一個98年生的人。
+- 食戟之靈原來四五季都結了。野良神到底還出不出呀。
+
+十二月11日 週六 晴轉多雲
+- 我是剪輯的天才。
+- 食戟之靈沒以前看時被帶動了。國王排名似乎也有些疲。
+
+十二月13日 週一 陰
+- 感覺要設一個annual reminder: 聖誕版本的提拉米蘇不要買 不要買 不要買。剛開蓋就回憶起來了。剩三個 扔掉可惜送人麻煩 我的天。
