--- a/2021/211200.md
+++ b/2021/211200.md
@@ -28,3 +28,19 @@
 
 十二月13日 週一 陰
 - 感覺要設一個annual reminder: 聖誕版本的提拉米蘇不要買 不要買 不要買。剛開蓋就回憶起來了。剩三個 扔掉可惜送人麻煩 我的天。
+
+十二月14日 週二 陰
+- I seek not to know the answers, but to understand the questions.
+
+十二月21日 週一 晴 冷
+- 外出要開始堅持戴耳機聽音樂 不然手機十有八九不在。累。
+
+十二月22日 週二 晴 冷
+- 不是人名寫錯 就是地址寫錯。今年好累啊。
+
+十二月25日 週六 下午晴
+- James Webb升空著實令人感動。
+
+十二月29日 週二 陰
+- 又做了一個回味起來身心愉悅的夢。
+
