相逢出於偶然 別離源於命運
是嗎？

--- a/2022/220100.md
+++ b/2022/220100.md
@@ -1,3 +1,6 @@
 一月3日 週一 陰有雨
 - 隔了個年 不過幾天前的事情 彷彿隔一個世紀那麼久。
 - #_小心低調悄悄的說 真的很幸運呢我_# 感謝神。
+- 有好多東西想寫。可不得不收心著手幾件事了 畢竟悠哉了整整一星期。高橋君的日劇左思右想 也留到下個假期吧。
+- 相逢出於偶然 別離源於命運。  
+？
