--- a/2022/220100.md
+++ b/2022/220100.md
@@ -4,3 +4,12 @@
 - 有好多東西想寫。可不得不收心著手幾件事了 畢竟悠哉了整整一星期。高橋君的日劇左思右想 也留到下個假期吧。
 - 相逢出於偶然 別離源於命運。  
 ？
+
+一月10日 週一 晴
+- 見字如晤 紙短情長
+
+一月19日 週三 陰有小雨
+- 「真不可思議啊 我們竟一起做了一整年的projects」
+
+一月25日 週二 陰
+- 終於明白為什麼他畢不了業換學校了 他想學的CS恐怕是我以前以為的CS。差太多了。
