--- a/2022/220300.md
+++ b/2022/220300.md
@@ -2,3 +2,7 @@
 三月3日 週四 晴
 - 仰望星空。「欸 那一片該不會是獵戶座吧？」打開Star Walk一看 還真的是！  
 哇 這應該是我用肉眼辨識出的第一個星座！
+
+三月11日 週五 晴
+- 是不是真的信則有。迄今兩次占卦 單就得到的卦象來說 也太相關了吧... 
+- 寫上一行字時想起 昨天有個有趣的想法想寫一寫 可惜才一天 連那想法是關於什麼的都忘了...
