--- a/2022/220300.md
+++ b/2022/220300.md
@@ -6,3 +6,6 @@
 三月11日 週五 晴
 - 是不是真的信則有。迄今兩次占卦 單就得到的卦象來說 也太相關了吧... 
 - 寫上一行字時想起 昨天有個有趣的想法想寫一寫 可惜才一天 連那想法是關於什麼的都忘了...
+
+三月15日 週二 陰 (16日凌晨)
+- 刷牙時想起剛和人說「這篇paper給人感覺就是they are pretty confident」。一下聯想到去年 也差不多這陣子 反覆聽到三個人說「we are pretty strong」。哈哈哈。
