why can’t i sleep before midnight?!
almost 1:00 again… unbelievable

--- a/2022/220300.md
+++ b/2022/220300.md
@@ -9,3 +9,7 @@
 
 三月15日 週二 陰 (16日凌晨)
 - 刷牙時想起剛和人說「這篇paper給人感覺就是they are pretty confident」。一下聯想到去年 也差不多這陣子 反覆聽到三個人說「we are pretty strong」。哈哈哈。
+
+三月19日 週五 晴
+- 和物理系學生開會到最後 他感嘆「啊我們組裡沒有一個學化學的」。我的人生啊 怎麼變成了這樣... 現在每天睡覺前鼓勵自己 先把這些課搞定 暑假就又有時間hobby project了。夏天快來吧。
+- 越來越覺得 基因若有優勢 其優勢是全方面的。大自然就是有偏愛。
