--- a/2022/220300.md
+++ b/2022/220300.md
@@ -17,3 +17,11 @@
 三月24日 週四 晴
 - 事情不會只因為一個原因發生。
 - 雖然但是 所謂的命運 大概不過是塵埃落定後的自圓其說。好在 至少我個人 選擇是自己的 且至今未曾有後悔。
+
+三月25日 週五 晴
+- 美國都決定取消冬令時了 歐洲能不能效仿啊。還撞上下週一8：45 presentation 悲しい。
+
+三月29日 週二 陰 (30日凌晨)
+- 「Form follows function」沒錯 同意。但這句話不是說把slides做成全黑白的就function了啊。  
+都要去睡覺了 又坐下 不吐不快 我的天哪。  
+雖然但是 好吧 誰叫物理系男生們跟數學系一樣可愛。好吧。
