--- a/2022/220300.md
+++ b/2022/220300.md
@@ -25,3 +25,16 @@
 - 「Form follows function」沒錯 同意。但這句話不是說把slides做成全黑白的就function了啊。  
 都要去睡覺了 又坐下 不吐不快 我的天哪。  
 雖然但是 好吧 誰叫物理系男生們跟數學系一樣可愛。好吧。
+
+三月30日 週三 晴
+- 看到幾則上海的新聞 奇恥大辱的感覺。之所以覺得奇恥大辱 因為一直以來都為她驕傲啊。
+> It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair, we had everything before us, we had nothing before us, we were all going direct to Heaven, we were all going direct the other way.
+- 似乎一切事情到了最後 都(大概率？)會成為一個概率問題。經濟學 化學 物理 命理 無一不是。
+- 回消息時突然想 遇上一個能持續覺得有趣的人真是非常可貴。大部分人只是一開始有趣。  
+(想了想) 似乎也不對。畢竟 哪有那麼多有趣的靈魂。
+- 巴塞羅那還是羅馬 抑或仍沒去過的里斯本？  
+- 還有20分鐘 今天一定要12點前睡。
+
+三月31日 週四 雪
+- 看到上一行真是... 牌坊不能亂立 好像又到12:30睡覺。我的慢動作已然無藥可救。
+- 真的下雪了。
