--- a/2022/220300.md
+++ b/2022/220300.md
@@ -35,6 +35,6 @@
 - 巴塞羅那還是羅馬 抑或仍沒去過的里斯本？  
 - 還有20分鐘 今天一定要12點前睡。
 
-三月31日 週四 雪
+三月31日 週四 雪轉陰雨
 - 看到上一行真是... 牌坊不能亂立 好像又到12:30睡覺。我的慢動作已然無藥可救。
 - 真的下雪了。
