--- a/2022/220400.md
+++ b/2022/220400.md
@@ -10,3 +10,10 @@
 - 死亡四月。  
 想要記錄些什麼 而記錄本身變得乏力。  
 否極 泰來。
+
+四月25日 週一 小雨
+- 腦海裡模擬了若干次要怎麼去和老師談 結果又一次證明了我都是自己在嚇自己。
+- 逛宜家真是解壓。我的夢想是有一天買一棟有寬敞工作間的房子 擺上各種機床 自由的做木工。
+- 也許再過兩個星期 會發現過去這兩星期的種種 根本不值一提。
+- 神啊。  
+軟弱時唯有呼喊祢。
