May God bless :)

--- a/2022/220500.md
+++ b/2022/220500.md
@@ -1,2 +1,8 @@
 五月3日 週二 晴
 - 臨時起意想做本詩選 開始了沒日沒夜的讀詩選詩排版。本想考試季過去好好補眠幾天 這一連又熬了幾夜 還只是開始。不過樂在其中 也算幸事吧。
+
+五月12日 週四 晴 有風
+- 封鎖隔離那會兒應該先把這門強制100%出席率的課給上了的。
+- 論文詩文來回切換。順便感嘆小時候背誦量驚人。
+- 熬過最糟糕後就只剩一個方向。一切向好發展。  
+
