dreaming of someone
maybe we'll see each other one day

--- a/2022/220500.md
+++ b/2022/220500.md
@@ -6,3 +6,10 @@
 - 論文詩文來回切換。順便感嘆小時候背誦量驚人。
 - 熬過最糟糕後就只剩一個方向。一切向好發展。  
 
+五月20日 週五 陰
+- 夢見一個沒見過面的人。這幾天的夢都是醒來會笑的夢。
+- 這兩天腦海裡不時浮現《贈汪倫》。
+- 對果醬真是排斥到了極點 乳酪蛋糕上那一點點 也不行。
+- 比起中式烹煮 義大利食物可謂短平快 晚餐救星。 
+- 撇了一眼日期 天哪 都快五月底了。  
+我想做的事可太多了 有多點時間就好了。
