May be a metaphor for life

--- a/2022/220500.md
+++ b/2022/220500.md
@@ -13,3 +13,22 @@
 - 比起中式烹煮 義大利食物可謂短平快 晚餐救星。 
 - 撇了一眼日期 天哪 都快五月底了。  
 我想做的事可太多了 有多點時間就好了。
+
+五月25日 週三 晴 (26日凌晨)
+- 本是查看下某訂單金額幾秒鐘的事 變成下單四種容量的(保溫)飲水杯。  
+我對生活場景總是有很多種預設 實際發生的有多少呢？
+
+五月27日 週五 晴
+- 這幾天連續夢到那個人。都是很奇妙的故事展開。比方今早是選蛋糕。
+
+五月28日 週六 晴
+- 週期性低落 什麼都不想做。
+
+五月30日 週一 晴
+- 五個杯子都收到了。  
+900ml的很大 萬一哪天去戶外野營說不定就用上了吧；  
+700ml的有點高 可磨砂的瓶身及手環設計 森林散步再適合不過了；  
+500ml的比現在的保溫杯胖 塞不進背包側袋 奈何瓶子好看 要不再買個新包？  
+...  
+斷捨離的魄力是否也像性向一樣 表達在基因裏的呢？
+
