wish myself good luck =]

--- a/2022/220600.md
+++ b/2022/220600.md
@@ -5,3 +5,12 @@
 原來那個人是上屆冠軍。  
 聽完我覺得 他今年來比的話 還能拿冠軍。
 - 真的好喜歡大提琴。有生之年要學一下的那種喜歡。
+
+六月14日 週二 晴
+- 這幾天晚上就躺沙發看電視持續了幾天。結論是 沒有好看的電視 這樣的過法只是平添焦慮。
+
+六月23日 週四 晴
+- 累出花了。連著幾天很累很累卻睡不著。
+- 居然有我自己提名自己代表小組做presentation的這一天。
+- 記得好像有要寫的東西。又來了 過完幾天就只記得「好像有一件事」這件事。
+- 好像又到了某個叉路口 當機立斷選了一條。祝自己好。
