--- a/2022/220800.md
+++ b/2022/220800.md
@@ -1,2 +1,10 @@
-8月2日 週二 晴
+八月2日 週二 晴
 - 剛剛心裏生了一句話 正要新建220700記一下 猛然意識到 竟已八月了。這驚嚇 剛剛想寫的什麼話完全忘記了。
+
+八月5日 週五 多雲
+- 我發現我喜歡寫code可能一半原因在VS Code。
+- CSharpier在Windows上測試沒問題 同樣設置到MBP就無事發生。不能auto format令人煩躁。  
+又 這麼好用的東西 身邊居然沒人在用。
+- Tower的win版極其不好用 倒逼我把terminal用會了...
+- 肌肉真的是有記憶的 這陣子鍵cmd/ctrl簡直到了混亂的地步。
+- 意外發現一件事 第一反應希望之前沒讓人困擾 接著感覺鬆了口氣 畢竟越來越像是給自己做的東西。
