--- a/2022/220800.md
+++ b/2022/220800.md
@@ -8,3 +8,6 @@
 - Tower的win版極其不好用 倒逼我把terminal用會了...
 - 肌肉真的是有記憶的 這陣子鍵cmd/ctrl簡直到了混亂的地步。
 - 意外發現一件事 第一反應希望之前沒讓人困擾 接著感覺鬆了口氣 畢竟越來越像是給自己做的東西。
+
+八月26日 週五 陰
+- 最近 可能連著快兩星期了 經常夢見K。有點莫名其妙。
