--- a/2022/220800.md
+++ b/2022/220800.md
@@ -11,3 +11,14 @@
 
 八月26日 週五 陰
 - 最近 可能連著快兩星期了 經常夢見K。有點莫名其妙。
+
+八月27日 週六 多雲
+- 「第二粒鈕扣。想起來 我也被託付過一粒鈕扣。」誒 有嗎？  
+正敲字這會兒想起來了 只是記不清這鈕扣是留在家裡了 還是縫起來了。青春啊。
+
+八月29日 週一 晴
+> “A theory is something nobody believes, except the person who made it. An experiment is something everybody believes, except the person who made it.”
+>
+> ― Albert Einstein
+
+會心一笑。
