No comparison, no harm
or indeed:
No comparison, no cure? Now I know how good I am.
But still, my frame of reference has always been me.
Good is not good enough, has to be better :)

--- a/2022/221200.md
+++ b/2022/221200.md
@@ -4,3 +4,7 @@
 
   忘記了。
 - 最近循環的歌 <木蘭の涙>。好幾次Apple music聽到我都特別停下工作去標記喜歡 當然每次都會發現已經標記過了。前兩天加到了播放列表裏。
+
+十二月15日 週三 晴
+- 「我知道 我們已經為此單獨開過一次會了。(笑) 她是個例 不具備代表性。」   
+    現在有點理解他比劃著「一般學生在這裏 而你已經到這個程度了」什麼意思了。一直覺得自己還不夠好 直到又和同學開組。還是六人組。
