--- a/2023/230100.md
+++ b/2023/230100.md
@@ -4,3 +4,12 @@
 一月18日 週三 晴
 - 可能早一點 晚一點 就不會遇到同樣的人了。接下去的生活軌跡也隨之截然不同。當然無法比較究竟哪條軌跡更好 但我總是感恩地覺得目前所在的軌道最好。於是分外感激生命中發生過的各種相遇。
 - 懷念故人了。一手帶我進入了一個全新的世界。
+
+一月19日 週四 雪後晴
+- 早晨做了一個非常開心的夢 夢裏和一個似乎現實裏認識但不怎麼熟的人像談戀愛一般的遊玩相處 一起抱著躺在床上的時候還被媽媽撞見了。也完全不尷尬 從頭到尾都是開心。他知道我的事情。就是現在不記得這個人是誰了。
+
+一月21日 週六 晴 / 除夕
+- 萬萬沒想到 居然會迷上非叔系男演員 還是內娛的 我的天哪。人生果然到處充滿不可思議。
+
+一月22日 週日 陰 / 正月初一
+- 小孩子才怪東怪西諸多藉口 我全然自願且全都要做到。加油！
