--- a/2023/230100.md
+++ b/2023/230100.md
@@ -13,3 +13,7 @@
 
 一月22日 週日 陰 / 正月初一
 - 小孩子才怪東怪西諸多藉口 我全然自願且全都要做到。加油！
+
+一月31日 週二 陰有小雨
+- 竟反覆看一部古偶劇 於我簡直不可思議。此其一。喜好從來都是跟角色不跟演員 意外發現這演員本身也挺有意思 期待他的一部新劇了。此其二。一直以為有顏就夠了 其他可以忽略。但意外發現某藝人竟然連「到此一遊」四個字都寫不全 雖說也不喜歡 但我大受震撼 從沒感覺變負面。還是需要基本的文化面啊。此其三。
+- 要不是真的太忙 我是真心考慮想幫他剪視頻啊... 中毒了救命。
