--- a/2023/230200.md
+++ b/2023/230200.md
@@ -1,3 +1,13 @@
 二月5日 週日 晴
 - 一度有點狂熱 回過頭來還是叔們統治世界。學歷不說明一切 但限定在當下娛樂圈的話 感覺沒學歷幾乎等同於文盲。字 面 意 思的文盲 都和文化沾不上邊了。大為震撼。雖然我短暫中毒的那位不至於像另一位那麼文盲 但怎麼說呢 顏值是天生的 氣質談吐修養是自身的。我是顏控 但反覆觀摩了幾天之後 瞬間不心動了。就像咖啡一樣。
 - 感謝神 讓我又能專心投入地工作了。然後有點內疚自己之前浪費的那零零碎碎十幾天。
+
+二月6日 週一 晴
+- 看了一整天論文。走神時想起前陣子的自己 真彷彿被奪舍了一般。現在就算心裏想到那個入迷的角色 也不會有衝動再看一遍兩遍無數遍了。只有覺得可惜 唉這麼多時間要是用來讀paper的話 現在文獻綜述說不定都寫完了。唉。
+
+二月15日 週三 晴
+- 時間是標量。
+
+二月18日 週六 陰
+- chatGPT有讓我論文效率更高嗎？並沒有。想著潤色語法檢查簡直太容易了 於是把寫作改稿的時間都用來讀閒書了。一口氣讀完了三本。
+- 暴論：人的意識的厲害之處可能是 在意識(場)裏 熵是可逆的。
