--- a/2023/230200.md
+++ b/2023/230200.md
@@ -11,3 +11,10 @@
 二月18日 週六 陰
 - chatGPT有讓我論文效率更高嗎？並沒有。想著潤色語法檢查簡直太容易了 於是把寫作改稿的時間都用來讀閒書了。一口氣讀完了三本。
 - 暴論：人的意識的厲害之處可能是 在意識(場)裏 熵是可逆的。
+
+二月21日 週二 陰
+- 似乎 好像 近兩年每年這個時候都會陷入情緒低谷。沒來由的 不可抗的。好在似乎過去了。
+
+二月27日 週一 晴 （28日凌晨）
+- 忽然發現 某些親人間的相處方式 若換成朋友 那是要翻臉的。
+- 一篇文章剛起了個頭 結果快一星期了 還是沒寫完。唉 希望之後繼續寫的時候別忘了當初想寫的東西。
